fix max height and overflow for the layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html {
+html,
+body {
   font-family: var(--font-outfit), 'Outfit';
-} */
+  overflow: hidden;
+}
 
 /* .footer-gradient {
   background-image: url("/footer-gradient.png");
